--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -10,6 +10,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_DB: eintern_db
+          POSTGRES_USER: eintern_user
+          POSTGRES_PASSWORD: strongpassword
+        ports:
+          - 5432:5432
+
     strategy:
       matrix:
         python-version: ["3.10"]
@@ -26,9 +36,13 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r backend/requirements.txt
+
+    - name: Run migrations
+      run: |
+        python backend/manage.py makemigrations
+        python backend/manage.py migrate
 
     - name: Run tests
       run: |
-        python manage.py test
-
+        python backend/manage.py test
